--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"@microsoft/microsoft-graph-types": "^2.25.0"
+	},
+	"dependencies": {
+		"@azure/msal-node": "^1.14.2",
+		"@microsoft/microsoft-graph-client": "^3.0.2"
 	},
 	"type": "module"
 }
